--- a/src/components/account/index.less
+++ b/src/components/account/index.less
@@ -25,13 +25,12 @@
 .accountListWrapper {
   background: #FFFFFF;
   border-radius: 10px;
-  height: calc(100vh - 172px);
+  flex: 1;
   margin-top: 24px;
   display: flex;
   flex-direction: column;
 
   .accountListContent {
-    overflow: hidden;
     display: flex;
     height: 100%;
 
@@ -46,7 +45,6 @@
       }
 
       .listWrapper {
-        overflow: scroll;
         flex: 1;
         .listItem {
           display: flex;
