use latest code from reddio

--- a/src/components/account/index.less
+++ b/src/components/account/index.less
@@ -25,12 +25,13 @@
 .accountListWrapper {
   background: #FFFFFF;
   border-radius: 10px;
-  flex: 1;
+  height: calc(100vh - 172px);
   margin-top: 24px;
   display: flex;
   flex-direction: column;
 
   .accountListContent {
+    overflow: hidden;
     display: flex;
     height: 100%;
 
@@ -45,6 +46,7 @@
       }
 
       .listWrapper {
+        overflow: scroll;
         flex: 1;
         .listItem {
           display: flex;
